--- a/index.html
+++ b/index.html
@@ -16,10 +16,13 @@
     <header>
       <nav class="nav">
         <ul class="nav-list">
-          <a href="#home"></a>
-          <li class="nav-list-item"><a href="#home">Home</a></li>
-          <li class="nav-list-item"><a href="#about">About</a></li>
-          <li class="nav-list-item"><a href="#contact">Contact</a></li>
+          <li><a class="nav-list-item" href="#home">Home</a></li>
+          <li class="nav-list-item">
+            <a class="nav-list-item" href="#about">About</a>
+          </li>
+          <li class="nav-list-item">
+            <a class="nav-list-item" href="#contact">Contact</a>
+          </li>
         </ul>
       </nav>
     </header>
@@ -44,24 +47,34 @@
       </section>
 
       <section id="contact" class="contact-section">
-        <h2 class="section-title">Contact me</h2>
+        <h2 class="section-title">Contact me.</h2>
         <form
-          action="mailto:dyakovabina@gmail.com"
+          name="sign-up"
           method="post"
-          enctype="text/plain"
           class="contact-form"
+          data-netlify="true"
         >
           <div class="form-input">
             <label for="name">Enter your name </label>
-            <input type="text" name="name" id="name" required />
+            <input
+              type="text"
+              name="name"
+              id="name"
+              placeholder="Your name"
+              required
+            />
           </div>
           <div class="form-input">
             <label for="email">Enter your email </label>
-            <input type="email" name="email" id="email" required />
+            <input
+              type="email"
+              name="email"
+              id="email"
+              placeholder="Your email"
+              required
+            />
           </div>
-          <div class="form-input">
-            <input type="submit" value="Send email" class="submit-btn"/>
-          </div>
+          <button class="submit-btn">Send email</button>
         </form>
       </section>
     </main>
