Add extra netlify settings

--- a/index.html
+++ b/index.html
@@ -48,12 +48,8 @@
 
       <section id="contact" class="contact-section">
         <h2 class="section-title">Contact me.</h2>
-        <form
-          name="sign-up"
-         
-          class="contact-form"
-          data-netlify="true"
-        >
+        <form name="sign-up" class="contact-form" data-netlify="true">
+          <input type="hidden" name="form-name" value="sign-up" />
           <div class="form-input">
             <label for="name">Enter your name </label>
             <input
