--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     />
   </head>
   <body>
-    <header>
+    <header class="header">
+      <a href="#"> <img src="logo.png" class="logo-img" alt="logo" /></a>
+
       <nav class="nav">
         <ul class="nav-list">
           <li><a class="nav-list-item" href="#home">Home</a></li>
@@ -31,16 +33,18 @@
       <section id="home" class="hero-section">
         <h1 class="title">Hi, my name is Albina!</h1>
         <h2 class="under-title">Welcome to my website.</h2>
+        <a href="#contact" class="btn link--contact">Contact Me</a>
       </section>
 
       <section id="about" class="about-section">
         <h2 class="section-title">About me.</h2>
         <div class="about-text">
           I'm 36 years old and originally from Russia. I live in Tønsberg and
-          really enjoy it here. I have a background as an HSE specialist in my
-          home country, but after moving to Norway, I decided to try something
-          new. I chose to study programming because it's something I truly
-          enjoy. Coding gives me a sense of accomplishment and joy. Currently, I
+          really enjoy it here.<br />
+          I have a background as an HSE specialist in my home country, but after
+          moving to Norway, I decided to try something new. <br />
+          I chose to study programming because it's something I truly enjoy.
+          Coding gives me a sense of accomplishment and joy.<br />Currently, I
           continue to code in my free time, but I'm now looking for a job where
           I can apply my knowledge and keep growing professionally.
         </div>
@@ -70,9 +74,12 @@
               required
             />
           </div>
-          <button class="submit-btn">Send email</button>
+          <button class="btn submit--btn">Send email</button>
         </form>
       </section>
     </main>
+    <footer class="footer-section">
+      <p>© 2025 Albina Diakova. All rights reserved.</p>
+    </footer>
   </body>
 </html>
