Add projects section, add image for hero section

--- a/index.html
+++ b/index.html
@@ -14,13 +14,18 @@
   </head>
   <body>
     <header class="header">
-      <a href="#"> <img src="logo.png" class="logo-img" alt="logo" /></a>
+      <a href="#">
+        <img src="./images/logo.png" class="logo-img" alt="logo"
+      /></a>
 
       <nav class="nav">
         <ul class="nav-list">
           <li><a class="nav-list-item" href="#home">Home</a></li>
           <li class="nav-list-item">
             <a class="nav-list-item" href="#about">About</a>
+          </li>
+          <li class="nav-list-item">
+            <a class="nav-list-item" href="#projects">Projects</a>
           </li>
           <li class="nav-list-item">
             <a class="nav-list-item" href="#contact">Contact</a>
@@ -31,9 +36,14 @@
 
     <main>
       <section id="home" class="hero-section">
-        <h1 class="title">Hi, my name is Albina!</h1>
-        <h2 class="under-title">Welcome to my website.</h2>
-        <a href="#contact" class="btn link--contact">Contact Me</a>
+        <div class="hero-content">
+          <h1 class="title">Hi, my name is Albina!</h1>
+          <h2 class="under-title">Welcome to my website.</h2>
+          <a href="#contact" class="btn link--contact">Contact Me</a>
+        </div>
+        <div class="hero-img-container"> 
+          <img src="./images/lla.png" alt="" class="hero-img"/>
+        </div>
       </section>
 
       <section id="about" class="about-section">
@@ -47,6 +57,133 @@
           Coding gives me a sense of accomplishment and joy.<br />Currently, I
           continue to code in my free time, but I'm now looking for a job where
           I can apply my knowledge and keep growing professionally.
+        </div>
+      </section>
+
+      <section id="projects" class="projects">
+        <div class="project-container">
+          <h1 class="section-title">Projects.</h1>
+          <div class="section-grid">
+            <div class="project-card">
+              <img
+                src="./images/lexi.png"
+                alt="Lexi project image"
+                class="project-img"
+              />
+              <div class="project-content">
+                <h4 class="project-name">Lexi</h4>
+                <p class="project-description">
+                  A language learning app that helps users study with
+                  flashcards.
+                </p>
+                <ul class="tech-list">
+                  <li>React</li>
+                  <li>C#</li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="project-card">
+              <img
+                src="./images/studybuddy.png"
+                alt="Study Buddy project image"
+                class="project-img"
+              />
+              <div class="project-content">
+                <h4 class="project-name">Study Buddy</h4>
+                <p class="project-description">
+                  An app designed to help students organize and manage study
+                  meetings.
+                </p>
+                <ul class="tech-list">
+                  <li>React</li>
+                  <li>TypeScript</li>
+                  <li>MUI</li>
+                  <li>C#</li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="project-card">
+              <img
+                src="./images/omnifood.png"
+                alt="Omnifood project image"
+                class="project-img"
+              />
+              <div class="project-content">
+                <h4 class="project-name">Omnifood</h4>
+                <p class="project-description">
+                  A playful food delivery concept app created for learning and
+                  UI practice.
+                </p>
+                <ul class="tech-list">
+                  <li>CSS</li>
+                  <li>HTML</li>
+                  <li>JavaScript</li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="project-card">
+              <img
+                src="./images/mixi-pixie.png"
+                alt="MixiPixie project image"
+                class="project-img"
+              />
+              <div class="project-content">
+                <h4 class="project-name">MixiePixie</h4>
+                <p class="project-description">
+                  A cocktail generator app that suggests random drink recipes.
+                </p>
+                <ul class="tech-list">
+                  <li>CSS</li>
+                  <li>HTML</li>
+                  <li>JavaScript</li>
+                  <li>Firebase</li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="project-card">
+              <img
+                src="./images/admin-dashboard.png"
+                alt="Admin Dashboard project image"
+                class="project-img"
+              />
+              <div class="project-content">
+                <h4 class="project-name">Admin Dashboard</h4>
+                <p class="project-description">
+                  A simple dashboard app for managing users and system data.
+                </p>
+                <ul class="tech-list">
+                  <li>Tailwind</li>
+                  <li>TypeScript</li>
+                  <li>C#</li>
+                  <li>PostgreSQL</li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="project-card">
+              <img
+                src="./images/portfolio.png"
+                alt="Portfolio website  image"
+                class="project-img"
+              />
+              <div class="project-content">
+                <h4 class="project-name">Portfolio</h4>
+                <p class="project-description">
+                  My personal portfolio website showcasing my projects and
+                  skills.
+                </p>
+                <ul class="tech-list">
+                  <li>React</li>
+                  <li>CSS</li>
+                  <li>TypeScript</li>
+                </ul>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
 
